--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
         "postcss": "^8.4.36",
         "tailwindcss": "^3.4.1",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "alpinejs": "^3.13.7"
     }
 }
